Adjusted display of footer content and added spacing necessary for fixed mobile nav.

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,18 +1,23 @@
 .site-footer {
+  margin-bottom: 66px;
   text-align: center;
   
   &__link {
     display: block;
+    margin-bottom: $sp_base * 1.5;
     color: $c_black;
     
-    font-size: 85%;
+    font-size: 100%;
     font-weight: 500;
     text-transform: uppercase;
     letter-spacing: 1.5px;
     
+    &:last-of-type { margin-bottom: 0; }
+    
     @media (min-width: 800px) {
       display: inline-block;
       margin-right: $sp_base * 3.75;
+      font-size: 85%;
       
       &:last-of-type { margin-right: 0; }
     }
@@ -30,7 +35,13 @@
     }
 
     span {
+      display: block;
+      margin-bottom: $sp_base * .5;
       
+      @media (min-width: 800px) {
+        display: inline;
+        margin-bottom: 0;
+      }
       a {
         color: inherit;
       }
